Done by Jenkins Job changemanifest: 2

--- a/vote-deployment.yaml
+++ b/vote-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: vote
     spec:
       containers:
-      - image: abhijeetnikam1995/front:9
+      - image: abhijeetnikam1995/front:latest
         name: vote
         ports:
         - containerPort: 80
