--- a/vote-deployment.yaml
+++ b/vote-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: vote
     spec:
       containers:
-      - image: abhijeetnikam1995/vote-j:latest
+      - image: 502447419870.dkr.ecr.us-east-1.amazonaws.com/vote-j2:latest
         name: vote
         ports:
         - containerPort: 80
